--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ebiza: AI Chatbot</title>
+    <title>Aiden: AI Chatbot</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,10 +12,10 @@
     <div class="container">
         <div class="head">
             <div class="logo" onclick="insta()">
-                <img src="mine!.jpg" alt="">
+                <img src="profile.jpg" alt="">
             </div>
             <div class="info">
-                <span>Ebiza AI</span></span>
+                <span>Aiden : AI</span></span>
                 <span id="primary-blue">online</span>
             </div>
         </div>
